--- a/package/amplify/functions/my-first-function/package.json
+++ b/package/amplify/functions/my-first-function/package.json
@@ -9,6 +9,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.858.0",
+    "@aws-sdk/lib-dynamodb": "^3.858.0",
     "axios": "^1.11.0",
     "cheerio": "^1.1.0"
   },
