--- a/package/package.json
+++ b/package/package.json
@@ -22,8 +22,10 @@
     "apexcharts": "4.7.0",
     "aws-amplify": "^6.15.5",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.6",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "next": "^15.1.7",
     "react": "19.1.0",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.8.0",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash": "4.14.196",
     "@types/react-syntax-highlighter": "^15.5.13",
     "aws-cdk-lib": "^2.204.0",
