--- a/package/package.json
+++ b/package/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/adapter-nextjs": "^1.6.8",
+    "@aws-amplify/ui-react-storage": "^3.12.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
@@ -17,6 +18,7 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/lab": "^7.0.0-beta.10",
     "@mui/material": "^7.0.1",
+    "@mui/material-nextjs": "^7.3.0",
     "@tabler/icons-react": "^3.33.0",
     "@types/node": "^20.2.3",
     "apexcharts": "4.7.0",
@@ -25,6 +27,7 @@
     "dompurify": "^3.2.6",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "isomorphic-dompurify": "^2.26.0",
     "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "next": "^15.1.7",
